# C-_DesignCase

./: CMakeLists.txt  README.md
src/创建/: abstract_factory.cpp  builder.cpp  factory_method.cpp  local_singleton.cpp  singleton.cpp  singleton_safe_thread.cpp
src/结构/: Decorator.cpp  adaptor.cpp
src/行为/: Decorator.cpp  Iterator.cpp  chain_of_command.cpp  command_mode.cpp  strategy.cpp  visitor.cpp
